--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
-  "name": "mongo-scraper",
+  "name": "google-books-search",
   "version": "1.0.0",
-  "description": "Web app that lets users view and leave comments on the latest news.",
+  "description": "react based google book search",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "author": "Mauricio Gutierrez",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^2.1.8",
+    "react-toastify": "^5.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/perrycpf/mongo-scraper.git"
+    "url": "git+https://github.com/MauricioGtrz/google-books-search"
   },
-  "author": "Perry Choy",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/perrycpf/mongo-scraper/issues"
+    "url": "https://github.com/MauricioGtrz/google-books-search/issues"
   },
-  "homepage": "https://github.com/perrycpf/mongo-scraper#readme",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^5.4.10",
-    "morgan": "^1.9.1",
-    "request": "^2.88.0"
-  }
+  "homepage": "https://github.com/MauricioGtrz/google-books-search#readme"
 }
